# bolt8

./: CLAUDE.md  README.md  flake.nix  ppad-bolt8.cabal
bench/: Main.hs  Weight.hs
lib/Lightning/Protocol/: BOLT8.hs
lib/Lightning/Protocol/BOLT8/: Internal.hs
plans/: ARCH1.md  ARCH2.md  ARCH3.md  ARCH4.md  IMPL1.md  IMPL2.md  IMPL3.md  IMPL4.md  IMPL5.md  IMPL6.md  REVIEW-c3040f683.md  REVIEW-ebf75f4de8031a369868aba3a94ef89b6a25422b.md
test/: Main.hs
