cabal-version:      3.0
name:               ppad-bolt8
version:            0.0.1
synopsis:           Encrypted and authenticated transport per BOLT #8
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.10.3
extra-doc-files:    CHANGELOG
description:
  Encrypted and authenticated transport, per
  [BOLT #8](https://github.com/lightning/bolts/blob/master/08-transport.md).

source-repository head
  type:     git
  location: git.ppad.tech/bolt8.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Lightning.Protocol.BOLT8
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-aead >= 0.3 && < 0.4
    , ppad-secp256k1 >= 0.5.3 && < 0.6
    , ppad-sha256 >= 0.3 && < 0.4

test-suite bolt8-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , bytestring
    , ppad-bolt8
    , tasty
    , tasty-hunit
    , text

benchmark bolt8-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , deepseq
    , ppad-bolt8

